fixed z-index on product h4

--- a/PizzaSolutions/Content/Site.css
+++ b/PizzaSolutions/Content/Site.css
@@ -1569,7 +1569,7 @@ video {
       color: #000;
       font-family: "futura_bt_extrablack";
       transform: translate(-50%, 0);
-      z-index: 100; }
+      z-index: 50; }
     .products .box .display-item {
       position: absolute;
       bottom: 0;
