--- a/PizzaSolutions/Content/scss/Products.scss
+++ b/PizzaSolutions/Content/scss/Products.scss
@@ -68,7 +68,7 @@
             color: #000;
             font-family: "futura_bt_extrablack";
             transform: translate(-50%, 0);
-            z-index: 100;
+            z-index: 50;
         }
 
         .display-item {
